# zuup

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml  test_ssl_security_features.py
.zed/: debug.json  settings.json
core/: Cargo.toml
core/examples/: http_download.rs  http_multisource_download.rs  magnet.rs
core/src/: api.rs  bandwidth.rs  callbacks.rs  checksum.rs  config.rs  download.rs  engine.rs  error.rs  event.rs  file.rs  lib.rs  logging.rs  media.rs  metalink.rs  metrics.rs  network.rs  protocol.rs  session.rs  types.rs
core/src/network/: proxy.rs  tls.rs
core/src/protocols/: ftp.rs  http.rs  mod.rs  sftp.rs  torrent.rs
docs/: api.md  configuration.md  development.md
examples/: README.md  __init__.py  config_integration_demo.py  deployment_modes_demo.py  ftp_sftp_examples.py  interactive_logging_demo.py  sample_downloads.py  test_task_7_requirements.py
examples/config_examples/: __init__.py  development_config.json  example_global_config.json  example_task_config.json  global_config.toml  logging_config.json  production_config.json
examples/manual_tests/: __init__.py  test_basic_functionality.py  test_config_management.py  test_data_models.py  test_development_environment.py  test_engine_registry.py  test_logging_monitoring.py  test_task_management.py  test_task_management_basic.py  test_tooling_integration.py  test_type_safety.py
gui/: Cargo.toml
gui/src/: app.rs  config.rs  engine.rs  main.rs  theme.rs
gui/src/views/: add_download_modal.rs  confirmation_dialog.rs  download_item.rs  download_manager.rs  mod.rs
scripts/: build.py  dev_tools.py  setup_dev.py
src/zuup/: __init__.py  __main__.py  main.py
src/zuup/api/: __init__.py  schemas.py  server.py
src/zuup/cli/: __init__.py  commands.py
src/zuup/config/: __init__.py  defaults.py  manager.py  settings.py
src/zuup/core/: __init__.py  app.py  interfaces.py  queue.py  task_manager.py
src/zuup/engines/: __init__.py  adaptive_scaling.py  auth_error_handler.py  bandwidth_manager.py  base.py  config_integration.py  connection_manager.py  connection_pool.py  cookie_manager.py  curl_worker.py  error_handler.py  format_extractor.py  format_selector.py  ftp_engine.py  http_engine.py  http_ftp_engine.py  media_config_integration.py  media_downloader.py  media_engine.py  media_error_handler.py  media_models.py  memory_mapped_io.py  metadata_manager.py  network_manager.py  playlist_manager.py  post_processor.py  pycurl_logging.py  pycurl_models.py  quality_controller.py  registry.py  segment_merger.py  ssl_security.py  torrent_alerts.py  torrent_engine.py  torrent_models.py  torrent_session.py
src/zuup/gui/: __init__.py  main_window.py
src/zuup/gui/resources/: __init__.py
src/zuup/gui/widgets/: __init__.py
src/zuup/storage/: __init__.py  cache.py  database.py  models.py  validation.py
src/zuup/utils/: __init__.py  debugging.py  helpers.py  logging.py  monitoring.py  validation.py
zuup-tauri/: .cta.json  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
zuup-tauri/src/: main.tsx  routeTree.gen.ts  styles.css
zuup-tauri/src-tauri/: Cargo.toml  tauri.conf.json
zuup-tauri/src-tauri/capabilities/: default.json
zuup-tauri/src-tauri/src/: lib.rs  main.rs
zuup-tauri/src-tauri/src/commands/: config.rs  download.rs  mod.rs
zuup-tauri/src-tauri/src/services/: config.rs  download.rs  event.rs  mod.rs
zuup-tauri/src/api/: config.ts  download.ts  events.ts  index.ts
zuup-tauri/src/components/: Header.tsx  add-download-modal.tsx  download-item.tsx  download-list.tsx  icons.tsx  theme-provider.tsx  theme-toggle.tsx
zuup-tauri/src/components/layout/: app-sidebar.tsx  header.tsx  main.tsx  nav-group.tsx  types.tsx
zuup-tauri/src/components/layout/controls/: mac.tsx  types.ts  window-controlls.tsx  windows.tsx
zuup-tauri/src/components/layout/controls/contexts/: plugin-window.tsx
zuup-tauri/src/components/layout/controls/linux/: gnome.tsx  index.tsx
zuup-tauri/src/components/layout/data/: sidebar-data.ts
zuup-tauri/src/components/ui/: badge.tsx  sidebar.tsx  sonner.tsx
zuup-tauri/src/routes/: __root.tsx  downloads.tsx  index.tsx
zuup-tauri/src/types/: config.ts  download.ts  index.ts
