[workspace]
members = ['core']
resolver = "3"

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1", features = ["full"] }

# Serialization and deserialization
serde = { version = "1", features = ["derive"] }

# Unique ID
cuid2 = "0.1"

# Database
sled = "0.34"

# Error handling
thiserror = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Url handling
url = { version = "2", features = ['serde'] }

# Async traits
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# File system operations
tempfile = "3"

# Cryptography
ring = "0.17"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Directory utilities
dirs = "6"

# Additional dependencies for config parsing
toml = "0.9"
serde_yaml = "0.9"
serde_json = "1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
