[workspace]
members = ['core']
resolver = "3"

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1", features = ["full"] }

# Serialization and deserialization
serde = { version = "1", features = ["derive"] }

# Unique ID
cuid2 = "0.1"

# Database
sled = "0.34"

# Error handling
thiserror = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Url handling
url = { version = "2", features = ['serde'] }

# Async traits
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }


# Configuration
config = "0.15"

# File system operations
tempfile = "3"

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false }

# Directory utilities
dirs = "6"

# Additional dependencies for config parsing
toml = "0.9"
serde_yaml = "0.9"
serde_json = "1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# DNS resolution
trust-dns-resolver = "0.23"

# Cryptography
ring = "0.17"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"

webpki-roots = "1"
