[workspace]
members = ['core', "gui", "zuup-tauri/src-tauri"]
resolver = "3"

[workspace.dependencies]
# Core dependencies (always included)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
cuid2 = "0.1"
sled = "0.34"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ['serde'] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
config = "0.15"
tempfile = "3"
dirs = "6"
toml = "0.9"
serde_yaml = "0.9"
serde_json = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
trust-dns-resolver = "0.23"

# Common utility dependencies
bytes = "1"
md5 = "0.8"
hex = "0.4"
which = "7"
percent-encoding = "2"
rand = "0.9"
quick-xml = { version = "0.38", features = ['serialize'] }
futures-util = "0.3"

# HTTP/HTTPS protocol dependencies
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false }
ring = "0.17"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
webpki-roots = "1"

# FTP protocol dependencies
async_ftp = "6"

# SFTP protocol dependencies
ssh2 = "0.9"

# BitTorrent protocol dependencies
librqbit = "8"
