[package]
name = "zuup-core"
version = "0.0.1"
edition = "2024"
description = "Core library for Zuup download manager"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cuid2 = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
