[package]
name = "zuup-core"
version = "0.0.1"
edition = "2024"
description = "Core library for Zuup download manager"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cuid2 = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tempfile = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

bytes = "1"
md5 = "0.8"
hex = "0.4"
which = "7"
percent-encoding = "2"
rand = "0.9"

quick-xml = { version = "0.38", features = ['serialize'] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
