[package]
name = "zuup-core"
version = "0.0.1"
edition = "2024"
description = "Core library for Zuup download manager"
license = "MIT"

[features]
default = ["http", "ftp", "sftp", "torrent"]
http = ["reqwest", "ring", "rustls", "rustls-native-certs", "rustls-pemfile", "webpki-roots"]
ftp = ["async_ftp"]
sftp = ["ssh2"]
torrent = ["librqbit"]
all-protocols = ["http", "ftp", "sftp", "torrent"]

[dependencies]
# Core dependencies (always included)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cuid2 = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
trust-dns-resolver = { workspace = true }

# Common utility dependencies
bytes = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }
which = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
quick-xml = { workspace = true }

# Protocol-specific dependencies (feature-gated)
reqwest = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

async_ftp = { workspace = true, optional = true }

ssh2 = { workspace = true, optional = true }

librqbit = { workspace = true, optional = true } 

[target.'cfg(unix)'.dependencies]
libc = "0.2"
