[package]
name = "zuup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dark-light = "2"

gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }

zuup_core = { path = "../core", package = "zuup-core" }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
