[package]
name = "zuup-tauri"
version = "0.1.0"
description = "A friendly download manager"
authors = ["Sayed Ahmed <sayeed205@gmail.com>"]
edition = "2024"

[lib]
name = "zuup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { workspace = true }
serde_json = { workspace = true }
