[package]
name = "zuup-tauri"
version = "0.1.0"
description = "A friendly download manager"
authors = ["Sayed Ahmed <sayeed205@gmail.com>"]
edition = "2024"

[lib]
name = "zuup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }

serde = { workspace = true }
serde_json = { workspace = true }
