[package]
name = "zuup-tauri"
version = "0.1.0"
description = "A friendly download manager"
authors = ["Sayed Ahmed <sayeed205@gmail.com>"]
edition = "2024"

[lib]
name = "zuup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }

# Zuup core integration
zuup-core = { path = "../../core", features = ["http", "ftp", "sftp", "torrent"] }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
url = { workspace = true }

# Additional dependencies for download manager
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-os = "2"
